fix: button jump

--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@ p {
 .connect-wallet-button:hover {
   background: var(--koii-mint);
   color: var(--koii-blue);
-  border: none;
+  border-color: transparent;
 }
 
 .public-key {
